--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li>Student One Name Here (as a link)</li>
-                <li>Student Two Name Here (as a link)</li>
+                <li><a href = "hunter.html">Hunter</a></li>
+                <li><a href = "Other.html">Hevwar</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
